Fix the central align position issue of the navbar logo

--- a/src/components/Logo/style.module.scss
+++ b/src/components/Logo/style.module.scss
@@ -1,7 +1,10 @@
+.link {
+  display: inline-flex;
+}
+
 .logo {
 
-  width: 92px;
-  height: auto;
+  width: 5.75rem;
 
   & > * {
     fill: var(--max);
